--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="valentineBox">
-        <p>Made with love by <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/mr_pemba_gelu_sherpa/"> Mandira Shrestha
+        <p>Made with love by <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/mr_pemba_gelu_sherpa/"> mr_pemba_gelu_sherpa
         </a></p>
         <img src="cat-heart.gif" id="yes-img" alt="love">
         <img src="togepiSad1.gif" id="no-img" alt="sad"> 
